# ai-platform-core

./: README.md  package-lock.json  package.json  platform.manifest.json  tsconfig.json  vercel.json
.github/: ocr-trigger
.vercel/: project.json
docs/: AUDIT-2026-07-19.md  AUTONOMOUS-DATA-CONTRACTS.md  CONFIGURATION-REGISTRY.md  ENGINEERING-SKILLS-CHARTER.md  EVENTS-OBSERVABILITY.md  MEMORY-EVIDENCE.md  PRODUCT-ADAPTER-AND-REPAIR.md  PROIDU-MAI-SCHEDULED-WORKER.md  PROIDU-MAI-VERTICAL-SLICE.md  PROJECT.md  PROVIDER-SDK.md  RETRIEVAL-RAG.md  SUPABASE-PERSISTENCE.md  WORKFLOW-ENGINE.md  WORKING-SESSION-2026-07-19.md  source-reliability-layer.md
examples/: execute-echo.md
scripts/: generate-build-info.ts
services/ingestion-worker/: .env.example  Dockerfile  README.md  pyproject.toml
services/ingestion-worker/worker/: __init__.py  main.py
src/: actions.ts  adapters.ts  autonomous-data.ts  config.ts  container.ts  contracts.ts  events.ts  factory-work-contract.ts  government-support-intelligence.ts  government-support-live-pipeline.ts  intelligence-lens-engine.ts  kbr-source-adapters.ts  memory.ts  official-sources.ts  openai-government-support-extractor.ts  orchestrator.ts  platform-supabase-client.ts  proidu-mai-worker.ts  proidu-mai.ts  providers.ts  registry.ts  repair.ts  retrieval.ts  run-official-source-ingestion.ts  scale-thinking-gate.ts  server.ts  source-adapters.ts  source-intelligence.ts  source-runner.ts  supabase-persistence.ts  supabase-source-persistence.ts  workflow.ts  writing-quality-gate.ts
test/: adapters.test.ts  autonomous-data.test.ts  (+23 more)
(+178 files in other folders)
