[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-platform-ingestion-worker"
version = "0.53.0"
description = "Async ingestion worker for AI Platform Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "curl-cffi>=0.10,<1",
  "feedparser>=6,<7",
  "openpyxl>=3.1,<4",
  "playwright>=1.50,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis[hiredis]>=5.2,<7",
]

[project.scripts]
ai-platform-ingestion = "worker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
